@@ -3,6 +3,7 @@ applauncherd (0.21.0) stable; urgency=low
   * Changes: Disable out of memory adjustments command line parameter added to invoker
   * Changes: AppData code refactoring 
   * Landscape splash-message implemented to protocol between invoker and launcher
+  * Splash parameters communicated to mcompositor
 
  -- Juha Lintula <juha.lintula@nokia.com>  Fri, 08 Mar 2011 10:16:05 +0200
 
